--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-MONGO_URL = 
-JWT_ADMIN_PASSWORD = 
-JWT_USER_PASSWORD =
+MONGO_URI=mongodbUri
+JWT_USER_PASSWORD=your_jwt_secret
+JWT_ADMIN_PASSWORD=your_admin_jwt_secret
