--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.18.0",
     "mongoose": "^8.15.0",
     "nodemon": "^3.1.10",
+    "react-toastify": "^11.0.5",
     "vim": "^0.1.0"
   }
 }
