--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
@@ -20,6 +22,7 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.15.0",
     "nodemon": "^3.1.10",
+    "razorpay": "^2.9.6",
     "vim": "^0.1.0"
   }
 }
